# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\AuthApiController;
+use App\Http\Controllers\Api\CategoryApiController;
 use App\Http\Controllers\Api\ProductApiController;
 
 // AUTH
@@ -18,14 +19,19 @@ Route::prefix('auth')->group(function () {
 });
 
 // CATEGORY
-
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/categories', [CategoryApiController::class, 'index']);
+    Route::get('/categories/{id}', [CategoryApiController::class, 'show']);
+    Route::post('/categories', [CategoryApiController::class, 'store']);
+    Route::put('/categories/{id}', [CategoryApiController::class, 'update']);
+    Route::delete('/categories/{id}', [CategoryApiController::class, 'destroy']);
+});
 
 // PRODUCT
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/products', [ProductApiController::class, 'index']);
-    Route::post('/products', [ProductApiController::class, 'store']);
     Route::get('/products/{id}', [ProductApiController::class, 'show']);
+    Route::post('/products', [ProductApiController::class, 'store']);
     Route::put('/products/{id}', [ProductApiController::class, 'update']);
     Route::delete('/products/{id}', [ProductApiController::class, 'destroy']);
 });
-
